# IrrigationStation

./: .gitignore  README.md
BonkersVisualizer/: CMakeLists.txt  README.md
BonkersVisualizer/Src/: main.cpp
IrrigationController/: README.md
ProtoBuf/: README.md
ProtoBuf/ProtoFiles/Practice/: Practice.proto  README.md
ProtoBuf/ProtoFiles/Practice/LotManager/: LotManager.sln
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/: LotManager.csproj
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/Src/App/: Program.cs
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/Src/Protobuf/: Practice.cs
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/Src/Writer/: Writer.cs
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/Src/Writer/GUIWindows/: GUIWindow.cs  GUIWindow_CreateParkingLot.cs  GUIWindow_ModifyLot.cs
ProtoBuf/ProtoFiles/Practice/LotManager/LotManager/Src/Writer/HelperFuncs/: FileSystemUtilities.cs  LoopingPrompter.cs
ProtoBuf/ProtoFiles/Practice/LotViewer/: CMakeLists.txt  Practice.proto
ProtoBuf/ProtoFiles/Practice/LotViewer/Inc/App/: Reader.h
ProtoBuf/ProtoFiles/Practice/LotViewer/Inc/ProtoBuf/: Practice.pb.h
ProtoBuf/ProtoFiles/Practice/LotViewer/Src/App/: Reader.cpp  main.cpp
ProtoBuf/ProtoFiles/Practice/LotViewer/Src/ProtoBuf/: Practice.pb.cc
RemoteControl/: README.md  RemoteControl.sln
RemoteControl/RemoteControl/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
